--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: Yatin Calculator and Notify
 
 on:
+  schedule:
+    - cron: '24 18 * * *'  # 毎日9:00 AMに実行 (UTC)
   workflow_dispatch:  # 手動での実行を許可
 
 jobs:
